Remove conflicting flex css and remove flex-basis: 0 to fix layouts on IE
[#168086230]

--- a/src/css/flex-grids/flex-grids.scss
+++ b/src/css/flex-grids/flex-grids.scss
@@ -48,16 +48,14 @@ $flexDirectionProps: row row-reverse column column-reverse;
 .col {
   min-width: 0;
   box-sizing: border-box;
-  -webkit-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
   -webkit-flex-grow: 1;
   -ms-flex-positive: 1;
   -webkit-box-flex: 1;
   flex-grow: 1;
+  flex-shrink: 0;
   -ms-flex-preferred-size: 0;
-  -webkit-flex-basis: 0;
-  flex-basis: 0;
   max-width: 100%;
   padding: 0 $base-unit 0 $base-unit;
 }
